# git-pull-request

./: .gitignore  .mergify.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  semantic-pull-request.yaml
auto_pull_request/: __init__.py  content.py  git.py  parser.py  pull_request.py  utility.py
git_auto_pull_request/: git.py  github.py  parser.py
git_pull_request/: __init__.py  bitbucket.py  content.py  git.py  github.py  pagure.py  parser.py  test.py  textparse.py  utility.py
git_pull_request/tests/: __init__.py  test_gpr.py  test_textparse.py
tests/: test_gpr.py  test_textparse.py
