[metadata]
name = git-pull-request
home-page = https://github.com/jd/git-pull-request
summary = Command line tool to send GitHub pull-request
description-file = README.rst
author = Julien Danjou
author-email = julien@danjou.info
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    git_pull_request

[extras]
test =
    fixtures

[entry_points]
console_scripts =
    git-pull-request = git_pull_request:main

[wheel]
universal = 1
