[metadata]
name = git-pull-request
url = https://github.com/Mergifyio/git-pull-request
description = Command line tool to send GitHub pull requests
long_description = file: README.rst
author = Julien Danjou
author-email = jd@mergify.io
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    pygithub
    daiquiri


[options.extras_require]
test =
    fixtures

[options.entry_points]
console_scripts =
    git-pull-request = git_pull_request:main

[wheel]
universal = 1
