[metadata]
name = git-pull-request
url = https://github.com/Ruth-Seven/git-pull-request
description = Command line tool to send GitHub pull requests
long_description = file: README.rst
author = Ove
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[wheel]
universal = 1
